--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
 @import './variables';
-@import './components/home';
-@import './components/header';
+@import '../components/header/header';
+@import '../components/home/home';
