se agregan estilos del layout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
 @import './variables';
 @import '../components/header/header';
 @import '../components/home/home';
+
+
+body {
+    margin: 0;
+    background-color: $backgrond-color;
+    min-width: 800px;
+    min-height: 600px;
+}
+
+* {
+    font-family: Proxima Nova;
+}
