se agregan estilos para las categorias

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import '../components/header/header';
 @import '../components/home/home';
+@import '../components/categories/categories';
 @import '../components/items-list/items-list';
 @import '../components/item/item';
 
