Se agregan estilos y fixes para listado de productos

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #fff159;
 $backgrond-color: #ebebeb;
+$secondary-text: rgba(0,0,0,.45);
 $gray: #666;
 $gray-over: #3f3f3f;
 $blue: #3483fa;
