--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,8 @@
 @import '../components/categories/categories';
 @import '../components/items-list/items-list';
 @import '../components/item/item';
+@import '../components/item-detail/item-detail';
+@import '../components/empty-state/empty-state';
 
 
 body {
