--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -9,36 +9,6 @@
     }
 }
 
-.item-image-container {
-    width: 160px;
-    img {
-        width: 160px;
-        height: 160px;
-        object-fit: contain;
-    }
-}
-
-.title-container {
-    padding: 1em 8em 0 2em;
-    width: 65%;
-
-    .item-price {
-        display: flex;
-
-        .item-amount {
-            font-size: 25px;
-        }
-        .item-decimals {
-            font-size: 16px;
-        }
-    }
-    
-}
-
-.seller-address-container {
-    width: 25%;
-    
-    .seller-address {
-        margin-top: 2em;
-    }
+.chakra-stack .css-1wj2hd1 {
+    border-bottom: none;
 }
